Rename certain stylesheets

--- a/dl4se-website/src/assets/styles/_extension.sass
+++ b/dl4se-website/src/assets/styles/_extension.sass
@@ -1,4 +1,4 @@
 @import "extension/border"
 @import "extension/grid"
 @import "extension/transition"
-@import "extension/zindex"
+@import "extension/z-index"
