Add custom `cursor` classes

--- a/dl4se-website/src/assets/styles/_extension.sass
+++ b/dl4se-website/src/assets/styles/_extension.sass
@@ -1,4 +1,5 @@
 @import "extension/border"
+@import "extension/cursor"
 @import "extension/grid"
 @import "extension/transition"
 @import "extension/z-index"
