Simplify validation CSS

--- a/dl4se-website/src/assets/styles/_mixins.sass
+++ b/dl4se-website/src/assets/styles/_mixins.sass
@@ -20,10 +20,10 @@
   $chevron-down: "M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z"
   @include bg-svg($chevron-down, $fill-hash, evenodd)
 
-@mixin bg-check-lg($fill-hash)
+@mixin bg-valid($fill-hash)
   $check-lg: "M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425a.247.247 0 0 1 .02-.022Z"
   @include bg-svg($check-lg, $fill-hash)
 
-@mixin bg-x-lg($fill-hash)
+@mixin bg-invalid($fill-hash)
   $x-lg: "M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8 2.146 2.854Z"
   @include bg-svg($x-lg, $fill-hash)
