--- a/dl4se-website/src/assets/styles/override/_validation.sass
+++ b/dl4se-website/src/assets/styles/override/_validation.sass
@@ -1,25 +1,22 @@
-$dark-green: darken($success, 15%)
-$dark-red: darken($danger, 15%)
+.form-control
+  $valid: darken($success, 15%)
+  $invalid: darken($danger, 15%)
 
-.form-control.is-valid:focus,
-.form-control.is-invalid:focus,
-.was-validated .form-control:valid:focus,
-.was-validated .form-control:invalid:focus
-  box-shadow: $box-shadow!important
+  &.is-valid,
+  &.is-invalid,
+  .was-validated &:valid,
+  .was-validated &:invalid
+    background-position: right calc(0.375em + 0.1875rem) center!important
 
-.form-control.is-valid,
-.form-control.is-invalid,
-.was-validated .form-control:valid,
-.was-validated .form-control:invalid
-  background-position: right calc(0.375em + 0.1875rem) center!important
+  &.is-valid,
+  .was-validated &:valid
+    @include bg-valid($valid)
 
-.form-control.is-valid,
-.was-validated .form-control:valid
-  @include bg-check-lg($dark-green)
+  &.is-invalid,
+  .was-validated &:invalid
+    @include bg-invalid($invalid)
 
-.form-control.is-invalid,
-.was-validated .form-control:invalid
-  @include bg-x-lg($dark-red)
-
-.invalid-feedback
-  color: $dark-red
+  & ~ .valid-feedback
+    color: $valid
+  & ~ .invalid-feedback
+    color: $invalid
