Correct `input` color in `ConfigTable`

--- a/dl4se-website/src/assets/styles/component/config-table.sass
+++ b/dl4se-website/src/assets/styles/component/config-table.sass
@@ -24,6 +24,7 @@ input
   min-width: $input-min-width!important
   max-width: $input-max-width!important
   min-height: $input-min-height!important
+  background-color: $white!important
   padding-right: calc(map-get($spacers, 4) + map-get($spacers, 4) / 2)!important
   border: 1px solid $gray-600!important
   border-left: 0!important
