Add CSS utilities for opacity from Bootstrap 5

--- a/dl4se-website/src/assets/styles/_extension.sass
+++ b/dl4se-website/src/assets/styles/_extension.sass
@@ -1,5 +1,6 @@
 @import "extension/border"
 @import "extension/cursor"
 @import "extension/grid"
+@import "extension/opacity"
 @import "extension/transition"
 @import "extension/z-index"
