Add CSS utilities for text decoration from Bootstrap 5

--- a/dl4se-website/src/assets/styles/_extension.sass
+++ b/dl4se-website/src/assets/styles/_extension.sass
@@ -2,5 +2,6 @@
 @import "extension/cursor"
 @import "extension/grid"
 @import "extension/opacity"
+@import "extension/text-decoration"
 @import "extension/transition"
 @import "extension/z-index"
