Display username requirements as invalid feedback

--- a/dl4se-website/src/assets/styles/view/profile.sass
+++ b/dl4se-website/src/assets/styles/view/profile.sass
@@ -19,7 +19,8 @@ form
   .bi
     margin: 3px 0!important
 
-  .form-text
+  .form-text,
+  .invalid-feedback
     display: flex!important
     flex-direction: row!important
     gap: 5px!important
