--- a/dl4se-website/src/assets/styles/view/profile.sass
+++ b/dl4se-website/src/assets/styles/view/profile.sass
@@ -1,4 +1,5 @@
 @import "@/assets/styles/variables"
+@import "@/assets/styles/mixins"
 
 .tabs ::v-deep ul[role="tablist"]
   gap: 10px!important
@@ -22,6 +23,8 @@ hr
 form
   .bi
     margin: 3px 0!important
+
+  @include btn-accent(".btn[type=submit] ~ .btn")
 
   .form-text,
   .invalid-feedback
