Update override css for `.b-skeleton-text`

--- a/dl4se-website/src/assets/styles/override/_skeleton.sass
+++ b/dl4se-website/src/assets/styles/override/_skeleton.sass
@@ -1,4 +1,4 @@
 .b-skeleton-text
-  height: 1rem
-  margin-bottom: 0.5rem
-  border-radius: 0
+  height: $font-size-base+rem!important
+  margin-bottom: map-get($spacers, 2)!important
+  border-radius: 0!important
