Update override css for the BootStrap `navbar`

--- a/dl4se-website/src/assets/styles/_override.sass
+++ b/dl4se-website/src/assets/styles/_override.sass
@@ -6,7 +6,7 @@
 @import "override/dropdown"
 @import "override/form"
 @import "override/input"
-@import "override/navbar-toggle"
+@import "override/navbar"
 @import "override/pagination"
 @import "override/progress"
 @import "override/scroll"
