Add missing `!important`

--- a/dl4se-website/src/assets/styles/override/_dropdown.sass
+++ b/dl4se-website/src/assets/styles/override/_dropdown.sass
@@ -4,5 +4,5 @@
 .dropdown-item
   &:active,
   &.active
-    color: $white
-    background-color: $gray-600
+    color: $white!important
+    background-color: $gray-600!important
