Set default heights for all inputs

--- a/dl4se-website/src/assets/styles/_variables.sass
+++ b/dl4se-website/src/assets/styles/_variables.sass
@@ -9,6 +9,9 @@ $toast-border-radius: 0
 $tooltip-max-width: 350px
 $tooltip-border-radius: 0
 $tooltip-opacity: 1
+$input-height-sm: 32px
+$input-height: 40px
+$input-height-lg: 48px
 $box-shadow-sm: 0 0 0 0.1rem rgba($black, .1)
 $box-shadow: 0 0 0 0.2rem rgba($black, .2)
 $box-shadow-lg: 0 0 0 0.4rem rgba($black, .4)
