--- a/dl4se-website/src/assets/styles/component/config-table.sass
+++ b/dl4se-website/src/assets/styles/component/config-table.sass
@@ -18,12 +18,8 @@ tr
   height: calc($table-body-row-height * 5 - 1px)!important
 
 input
-  $input-min-height: 40px
-  $input-min-width: 100px
-  $input-max-width: $input-min-width * 3.5
-  min-width: $input-min-width!important
-  max-width: $input-max-width!important
-  min-height: $input-min-height!important
+  min-width: 100px!important
+  max-width: 350px!important
   background-color: $white!important
   padding-right: calc(map-get($spacers, 4) + map-get($spacers, 4) / 2)!important
   border: 1px solid $gray-600!important
