--- a/dl4se-website/src/assets/styles/view/profile.sass
+++ b/dl4se-website/src/assets/styles/view/profile.sass
@@ -31,7 +31,4 @@ form
     gap: 5px!important
 
   input
-    $card-form-input-height: 40px
-    $card-form-input-max-width: 350px
-    height: $card-form-input-height!important
-    max-width: $card-form-input-max-width!important
+    max-width: 350px!important
