Improve styling of `/profile` view

--- a/dl4se-website/src/assets/styles/view/profile.sass
+++ b/dl4se-website/src/assets/styles/view/profile.sass
@@ -7,8 +7,8 @@
     border-radius: 0!important
 
 .card-subtitle
-  color: $black!important
-  margin-bottom: 10px!important
+  $margin: map-get($spacers, 2)
+  margin-bottom: $margin!important
 
 .card-body
   height: 60vh!important
