Update default styling of progress bars

--- a/dl4se-website/src/assets/styles/_variables.sass
+++ b/dl4se-website/src/assets/styles/_variables.sass
@@ -12,6 +12,10 @@ $tooltip-opacity: 1
 $input-height-sm: 32px
 $input-height: 40px
 $input-height-lg: 48px
+$progress-bar-bg: theme-color("dark")
+$progress-bg: $gray-100
+$progress-border: 1px solid $gray-600
+$progress-border-radius: 0
 $box-shadow-sm: 0 0 0 0.1rem rgba($black, .1)
 $box-shadow: 0 0 0 0.2rem rgba($black, .2)
 $box-shadow-lg: 0 0 0 0.4rem rgba($black, .4)
