--- a/dl4se-website/src/assets/styles/override/_progress.sass
+++ b/dl4se-website/src/assets/styles/override/_progress.sass
@@ -1,4 +1,2 @@
 .progress
-  border-radius: 0!important
-  border: 1px solid $gray-600!important
-  background-color: $gray-100!important
+  border: $progress-border!important
