Split all variables into sections that match those in Bootstrap

--- a/dl4se-website/src/assets/styles/_variables.sass
+++ b/dl4se-website/src/assets/styles/_variables.sass
@@ -1,28 +1,47 @@
 @import "node_modules/bootstrap/scss/_functions.scss"
 @import "node_modules/bootstrap/scss/_variables.scss"
 
+// Opacity
 $disabled-opacity: .65
-$hr-margin-y: 0
+
+// Tables
 $table-header-row-height: 50px
 $table-body-row-height: 64px
+$table-transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out
+
+// Toasts
 $toast-border-radius: 0
+
+// Tooltips
 $tooltip-max-width: 350px
 $tooltip-border-radius: 0
 $tooltip-opacity: 1
+
+// Forms
 $input-height-sm: 32px
 $input-height: 40px
 $input-height-lg: 48px
+
+// Progress bars
 $progress-bar-bg: theme-color("dark")
 $progress-bg: $gray-100
 $progress-border: 1px solid $gray-600
 $progress-border-radius: 0
+
+// Box Shadows
 $box-shadow-sm: 0 0 0 0.1rem rgba($black, .1)
 $box-shadow: 0 0 0 0.2rem rgba($black, .2)
 $box-shadow-lg: 0 0 0 0.4rem rgba($black, .4)
+
+// Links
 $link-color: theme-color("secondary")
 $link-hover-color: darken($link-color, 15%)
 $link-hover-decoration: none
-$table-transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out
+
+// Typography
 $font-family-sans-serif: "Trebuchet MS", Helvetica, Arial, sans-serif
 $font-family-base: $font-family-sans-serif
+$hr-margin-y: 0
+
+// Options
 $enable-responsive-font-sizes: true
