--- a/dl4se-website/src/assets/styles/_variables.sass
+++ b/dl4se-website/src/assets/styles/_variables.sass
@@ -22,6 +22,17 @@ $input-height-sm: 32px
 $input-height: 40px
 $input-height-lg: 48px
 
+// Form validation
+$form-feedback-valid-color: darken($success, 15%)
+$form-feedback-invalid-color: darken($danger, 15%)
+$form-feedback-icon-valid-color: $form-feedback-valid-color
+$form-feedback-icon-valid: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='#{$form-feedback-icon-valid-color}' viewBox='0 0 16 16'><path d='M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425a.247.247 0 0 1 .02-.022Z'/></svg>")
+$form-feedback-icon-invalid-color: $form-feedback-invalid-color
+$form-feedback-icon-invalid: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='#{$form-feedback-icon-invalid-color}' viewBox='0 0 16 16'><path d='M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8 2.146 2.854Z'/></svg>")
+$form-validation-state-valid: ("color": $form-feedback-valid-color, "icon": $form-feedback-icon-valid)
+$form-validation-state-invalid: ("color": $form-feedback-invalid-color, "icon": $form-feedback-icon-invalid)
+$form-validation-states: ("valid": $form-validation-state-valid, "invalid": $form-validation-state-invalid)
+
 // Progress bars
 $progress-bar-bg: theme-color("dark")
 $progress-bg: $gray-100
