Change default radio input styling to a square variant

--- a/dl4se-website/src/assets/styles/_variables.sass
+++ b/dl4se-website/src/assets/styles/_variables.sass
@@ -21,6 +21,8 @@ $tooltip-opacity: 1
 $input-height-sm: 32px
 $input-height: 40px
 $input-height-lg: 48px
+$custom-radio-indicator-border-radius: 0
+$custom-radio-indicator-icon-checked: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='12' height='12'><rect width='12' height='12' fill='#{$custom-control-indicator-checked-color}'/></svg>")
 
 // Form validation
 $form-feedback-valid-color: darken($success, 15%)
