Add utility classes for aspect ratios from Bootstrap 5

--- a/dl4se-website/src/assets/styles/_extension.sass
+++ b/dl4se-website/src/assets/styles/_extension.sass
@@ -2,6 +2,7 @@
 @import "extension/cursor"
 @import "extension/grid"
 @import "extension/opacity"
+@import "extension/ratio"
 @import "extension/text"
 @import "extension/text-decoration"
 @import "extension/transition"
