--- a/dl4se-website/src/assets/styles/override/_table.sass
+++ b/dl4se-website/src/assets/styles/override/_table.sass
@@ -1,11 +1,31 @@
+.b-table-sticky-header th
+  // This is required to undo a bug that was introduced in version 2.22 of BSV:
+  // https://github.com/bootstrap-vue/bootstrap-vue/issues/6961
+  position: sticky!important
+
+.b-table-empty-row
+  color: $black!important
+  background-color: $gray-200!important
+  height: calc($table-body-row-height * 5 - 1px)!important
+
+.table
+  th, td
+    vertical-align: middle!important
+
+  &.table-hover
+    tbody tr
+      color: $black!important
+      background-color: $gray-200!important
+      transition: $table-transition!important
+      &:hover
+        color: $white!important
+        background-color: $gray-600!important
+
+  &:not(.table-sm)
+    thead tr
+      height: $table-header-row-height
+    tbody tr
+      height: $table-body-row-height
+
 .table-container
   border-bottom: 1px solid $gray-600!important
-
-.table-hover
-  tbody tr
-    color: $black
-    background-color: $gray-200
-    transition: $table-transition
-    &:hover
-      color: $white
-      background-color: $gray-600
