Change default `alert` styling

--- a/dl4se-website/src/assets/styles/_variables.sass
+++ b/dl4se-website/src/assets/styles/_variables.sass
@@ -38,6 +38,10 @@ $form-validation-state-valid: ("color": $form-feedback-valid-color, "icon": $for
 $form-validation-state-invalid: ("color": $form-feedback-invalid-color, "icon": $form-feedback-icon-invalid)
 $form-validation-states: ("valid": $form-validation-state-valid, "invalid": $form-validation-state-invalid)
 
+// Alerts
+$alert-margin-bottom: 0
+$alert-border-radius: 0
+
 // Progress bars
 $progress-bar-bg: theme-color("dark")
 $progress-bg: $gray-100
