Add `gap` styling to the `DetailsModal` tab list

--- a/dl4se-website/src/assets/styles/component/details-modal.sass
+++ b/dl4se-website/src/assets/styles/component/details-modal.sass
@@ -1,6 +1,9 @@
 @import "@/assets/styles/variables"
 @import "@/assets/styles/mixins"
 
+.tabs ::v-deep ul[role="tablist"]
+  gap: 10px!important
+
 .tab-pane::v-deep
   pre
     border: 1px solid $gray-300!important
