--- a/dl4se-website/src/assets/styles/component/details-modal.sass
+++ b/dl4se-website/src/assets/styles/component/details-modal.sass
@@ -4,9 +4,8 @@
 .tabs ::v-deep ul[role="tablist"]
   gap: 10px!important
 
-.tab-pane::v-deep
-  pre
-    border: 1px solid $gray-300!important
+.tab-pane
+  padding: 0!important
 
 ::v-deep
   .modal-body > *
