--- a/dl4se-website/src/assets/styles/_variables.sass
+++ b/dl4se-website/src/assets/styles/_variables.sass
@@ -40,6 +40,7 @@ $form-validation-states: ("valid": $form-validation-state-valid, "invalid": $for
 
 // Navs
 $nav-tabs-border-radius: 0
+$nav-tabs-link-hover-border-color: none
 
 // Alerts
 $alert-margin-bottom: 0
