Change default styling of breadcrumb components

--- a/dl4se-website/src/assets/styles/_variables.sass
+++ b/dl4se-website/src/assets/styles/_variables.sass
@@ -52,6 +52,12 @@ $progress-bg: $gray-100
 $progress-border: 1px solid $gray-600
 $progress-border-radius: 0
 
+// Breadcrumbs
+$breadcrumb-bg: transparent
+$breadcrumb-margin-bottom: 0
+$breadcrumb-border-radius: 0
+$breadcrumb-item-padding: 0
+
 // Box Shadows
 $box-shadow-sm: 0 0 0 0.1rem rgba($black, .1)
 $box-shadow: 0 0 0 0.2rem rgba($black, .2)
