Remove headers and footers from `TextCarouselSlide` components

--- a/dl4se-website/src/assets/styles/component/text-carousel-slide.sass
+++ b/dl4se-website/src/assets/styles/component/text-carousel-slide.sass
@@ -8,3 +8,6 @@
 .card-footer
   border: 0!important
   background-color: $white!important
+
+.card-body
+  padding-bottom: map-get($spacers, 5)!important
