--- a/dl4se-website/src/assets/styles/view/home.sass
+++ b/dl4se-website/src/assets/styles/view/home.sass
@@ -5,12 +5,8 @@ section
   flex-direction: column!important
   justify-content: center!important
 
-  &#logo
-    min-height: 90vh!important
-  &#summary
-    min-height: 82vh!important
-
 .branding
+  margin: 0!important
   font-size: calc(3rem + 3vw)!important
 
   .negative
