Change style of `ClearableInput`
This component is a sibling to the one we introduced. It makes sense
that they should at least look similar.

--- a/dl4se-website/src/assets/styles/component/clearable-input.sass
+++ b/dl4se-website/src/assets/styles/component/clearable-input.sass
@@ -7,8 +7,12 @@ input
   border-width: 0 0 1px 0!important
 
 .btn
-  @include button-variant($gray-200, $gray-600, $gray-600, $gray-600, $gray-700)
   border-top: 0!important
   border-left: 0!important
   border-right: 0!important
   border-radius: 0!important
+  color: $gray-600!important
+  background-color: $gray-200!important
+
+  &:hover
+    color: $gray-700!important
