Integrate new component into `DetailsModal`

--- a/dl4se-website/src/assets/styles/component/details-modal.sass
+++ b/dl4se-website/src/assets/styles/component/details-modal.sass
@@ -5,6 +5,9 @@
   padding: 0!important
 
 ::v-deep
+  code
+    padding: map-get($spacers, 3)!important
+
   .modal-body > *
     border-radius: 0!important
   .modal-content
