Integrate new component into `CodeInstanceView`

--- a/dl4se-website/src/assets/styles/view/code-instance.sass
+++ b/dl4se-website/src/assets/styles/view/code-instance.sass
@@ -1,6 +1,8 @@
 @import "@/assets/styles/variables"
 @import "@/assets/styles/mixins"
 
+@import "highlight.js/styles/github.css"
+
 .tab-pane
   $td-height: 50px
   padding: 0!important
