Fix positioning of `HighlightedCode` component elements

--- a/dl4se-website/src/assets/styles/component/highlighted-code.sass
+++ b/dl4se-website/src/assets/styles/component/highlighted-code.sass
@@ -5,6 +5,8 @@
 
 pre
   margin: 0!important
+  position: relative!important
   ::v-deep
     code.hljs
       background: none!important
+      position: absolute!important
