Fix: Restore static positioning for highlighted code blocks in modals

--- a/dl4se-website/src/assets/styles/component/details-modal.sass
+++ b/dl4se-website/src/assets/styles/component/details-modal.sass
@@ -5,8 +5,9 @@
   padding: 0!important
 
 ::v-deep
-  code
+  .modal-body code.hljs
     padding: map-get($spacers, 3)!important
+    position: static!important
 
   .modal-body > *
     border-radius: 0!important
